--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "extensions-buddycomplex",
   "version": "2.0.2",
+   "repositoryName": "BuddyComplex Extensions (0.6)",
   "description": "BuddyComplex extensions for 0.6!",
   "main": "index.js",
   "scripts": {
