--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,59 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "pwa-node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\src\\tests\\MangaBuddy.ts",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
-        }
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Test Current Source",
+        "program": "${workspaceFolder}/node_modules/paperback-cli/bin/run",
+        "args": ["test", "${fileBasenameNoExtension}"],
+        "console": "integratedTerminal",
+        "sourceMaps": true,
+        "internalConsoleOptions": "neverOpen"
+      },
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Test All Sources",
+        "program": "${workspaceFolder}/node_modules/.bin/paperback.cmd",
+        "args": ["test"],
+        "console": "integratedTerminal",
+        "sourceMaps": true,
+        "internalConsoleOptions": "neverOpen"
+      },
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Mocha Current File",
+        "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+        "args": [
+          "--no-timeouts",
+          "--trace-warnings",
+          "--colors",
+          "${file}",
+          "--require",
+          "ts-node/register"
+        ],
+        "console": "integratedTerminal",
+        "sourceMaps": true,
+        "internalConsoleOptions": "neverOpen"
+      },
+      {
+        "type": "node",
+        "request": "launch",
+        "name": "Mocha Current File",
+        "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+        "args": [
+          "--no-timeouts",
+          "--trace-warnings",
+          "--colors",
+          "${file}",
+          "--require",
+          "ts-node/register"
+        ],
+        "console": "integratedTerminal",
+        "sourceMaps": true,
+        "internalConsoleOptions": "neverOpen"
+      }
     ]
-}
+  }
